--- a/Auth-Service/requirements.txt
+++ b/Auth-Service/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-Flask-SQLAlchemy
-Flask-Login
-requests
-pyngrok
-werkzeug
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.3
+Flask-CORS==4.0.0
+requests==2.31.0
+werkzeug==3.0.1
