update les fichiers de docker

--- a/Doctors-Service/backend/Dockerfile
+++ b/Doctors-Service/backend/Dockerfile
@@ -2,21 +2,36 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# تثبيت المكتبات الأساسية
+# Installer les dépendances système
 RUN apt-get update && apt-get install -y \
     gcc \
-    postgresql-client \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# نسخ وتثبيت المتطلبات
+# Copier et installer les requirements
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# نسخ ملفات المشروع
+# Copier tous les fichiers du projet
 COPY . .
 
-# فتح المنفذ
+# ✅ Créer les fichiers JSON s'ils n'existent pas
+RUN touch doctors_data.json appointments_data.json && \
+    echo '[]' > doctors_data.json && \
+    echo '[]' > appointments_data.json
+
+# Exposer le bon port
 EXPOSE 5000
 
-# الانتظار حتى يصبح قاعدة البيانات جاهزة ثم تشغيل التطبيق
+# Variables d'environnement
+ENV FLASK_APP=app.py
+ENV FLASK_HOST=0.0.0.0
+ENV FLASK_PORT=5000
+ENV FLASK_DEBUG=False
+
+# Healthcheck
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+  CMD curl -f http://localhost:5000/api/doctors || exit 1
+
+# Commande de démarrage
 CMD ["python", "app.py"]
