--- a/Patient-Service/backend/dockerfile
+++ b/Patient-Service/backend/dockerfile
@@ -2,21 +2,24 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# تثبيت المكتبات الأساسية
+# Installer les dépendances système
 RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 
-# نسخ وتثبيت المتطلبات
+# Copier et installer les requirements
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# نسخ ملفات المشروع
+# Copier les fichiers du projet
 COPY . .
 
-# فتح المنفذ
-EXPOSE 5000
+# Créer le dossier uploads avec permissions
+RUN mkdir -p static/uploads && chmod 755 static/uploads
 
-# الانتظار حتى يصبح قاعدة البيانات جاهزة ثم تشغيل التطبيق
+# Exposer le bon port
+EXPOSE 5001
+
+# Lancer l'application
 CMD ["python", "app.py"]
